# crab-pot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  LOGGING_EXAMPLES.md  README.md  backlog.md  docker-compose.dev.yml  docker-compose.yml  temperature.schema.json
.github/workflows/: ci.yml
api/: client.py  client.sh  config.sh  main.py  requirements.txt
api/logs/: create.sh  get.sh
api/python-mig/: main.py
api/schemas/: get.sh
benches/: api_benchmarks.rs
docker/db/: 02_api_keys.sql  03_schemas.sql  04_logs.sql  05_functions.sql  06_seed_data.sql  init.sql
docs/: README.md  SRD.md  openapi.yaml
scripts/: README.md  api-curl.sh
scripts/tests/: run-integration.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/dto/: api_key_dto.rs  common.rs  cursor.rs  log_dto.rs  mod.rs  schema_dto.rs
src/handlers/: api_key_handlers.rs  log_handlers.rs  mod.rs  schema_handlers.rs  ws_handlers.rs
src/middleware/: api_key.rs  mod.rs  rate_limiter.rs  request_id.rs
src/models/: api_key.rs  api_key_model.rs  log_model.rs  mod.rs  query_params.rs  schema_model.rs  schema_name_version.rs
src/repositories/: api_key_repository.rs  log_repository.rs  mod.rs  query_builder.rs  schema_repository.rs
src/services/: api_key_service.rs  log_service.rs  mod.rs  schema_service.rs
tests/: integration_tests.rs
tests/api_keys/: create.rs  delete.rs  mod.rs  read.rs  rotate.rs
tests/common/: fixtures.rs  mod.rs  test_app.rs
tests/logs/: create.rs  delete.rs  mod.rs  pagination.rs  read.rs
tests/rate_limiting/: basic.rs
(+13 files in other folders)
