[package]
name = "crab-pot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "migrate", "ipnetwork"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonschema = "0.33.0"
futures-util = "0.3"
sha2 = "0.10.9"
rand = "0.9.2"
base64 = "0.22.1"
validator = { version = "0.18", features = ["derive"] }
dashmap = "6.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio-tungstenite = "0.21"
tokio-postgres = "0.7"
testcontainers = "0.26"
testcontainers-modules = { version = "0.13", features = ["postgres", "blocking"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "api_benchmarks"
harness = false
